[package]
name = "telluris"
version = "0.1.0"
authors = ["sguimmara"]
edition = "2018"

[[bin]]
name = "telluris"
path = "src/bin/telluris.rs"

[dependencies]
telluris-spatial = { path = "telluris-spatial", version = "0.1.0"}
telluris-renderer = { path = "telluris-renderer", version = "0.1.0"}
winit = "0.18"
log = "0.4.6"
simplelog = "0.5.0"
