[package]
name = "telluris"
version = "0.1.0"
authors = ["sguimmara"]
edition = "2018"

[[bin]]
name = "telluris"
path = "src/bin/telluris.rs"

[dependencies]
telluris-provider = { path = "telluris-provider", version = "0.1.0"}
telluris-spatial = { path = "telluris-spatial", version = "0.1.0"}
telluris-renderer = { path = "telluris-renderer", version = "0.1.0"}
telluris-tiler = { path = "telluris-tiler", version = "0.1.0"}
specs = "0.14.3"
winit = "0.18"
log = "0.4.6"
simplelog = "0.5.0"
