[package]
name = "telluris-tiler"
version = "0.1.0"
authors = ["Sébastien Guimmara <sguimmara@pobox.com>"]
edition = "2018"

[dependencies]
telluris-spatial = { path = "../telluris-spatial", version = "0.1.0"}
specs = "0.14.3"
log = "0.4.6"
image = "0.21.0"

[dev-dependencies]
rand = "0.6.5"
quickcheck = "0.8"
quickcheck_macros = "0.8"